--- a/Beginner Projects/Task Manager/index.html
+++ b/Beginner Projects/Task Manager/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do List</title>
+    <title>Task Manager</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>Task Manager</h1>
         <input type="text" id="taskInput" placeholder="Add a new task...">
         <button id="addTaskBtn">Add Task</button>
         <ol id="taskList"></ol>
